@@ -1,15 +1,14 @@
 #include <kernaux/printf_fmt.h>
 
 #include <assert.h>
+#include <stddef.h>
 
 void example_main()
 {
     {
-        const char *format = "s";
+        const char *const format = "s";
 
-        struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-
-        format = KernAux_PrintfFmt_Spec_parse(&spec, format);
+        struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create(format);
 
         if (spec.set_width) {
             // Actually this line won't be executed.
@@ -19,25 +18,24 @@ void example_main()
             // Actually this line won't be executed.
             KernAux_PrintfFmt_Spec_set_precision(&spec, 0);
         }
+
+        assert(spec.format_start == format);
+        assert(spec.format_limit == &format[1]);
 
         assert(spec.flags == 0);
         assert(spec.width == 0);
         assert(spec.precision == 0);
         assert(spec.type == KERNAUX_PRINTF_FMT_TYPE_STR);
         assert(spec.base == 0);
+
+        assert(!spec.set_width);
+        assert(!spec.set_precision);
     }
 
     {
         const char *format = "012.34f";
 
-        struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-
-        // Parsing of each part may be done separately.
-        KernAux_PrintfFmt_Spec_parse_flags(&spec, &format);
-        KernAux_PrintfFmt_Spec_parse_width(&spec, &format);
-        KernAux_PrintfFmt_Spec_parse_precision(&spec, &format);
-        KernAux_PrintfFmt_Spec_parse_length(&spec, &format);
-        KernAux_PrintfFmt_Spec_parse_type(&spec, &format);
+        struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create_out(&format);
 
         if (spec.set_width) {
             // Actually this line won't be executed.
@@ -47,6 +45,9 @@ void example_main()
             // Actually this line won't be executed.
             KernAux_PrintfFmt_Spec_set_precision(&spec, 0);
         }
+
+        assert(spec.format_start == &format[-7]);
+        assert(spec.format_limit == format);
 
         assert(
             spec.flags ==
@@ -59,15 +60,16 @@ void example_main()
         assert(spec.precision == 34);
         assert(spec.type == KERNAUX_PRINTF_FMT_TYPE_FLOAT);
         assert(spec.base == 0);
+
+        assert(!spec.set_width);
+        assert(!spec.set_precision);
     }
 
     {
         const char *const format = " *.*ld";
+        const char *new_format = NULL;
 
-        struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create();
-
-        // Returning value may be ignored.
-        KernAux_PrintfFmt_Spec_parse(&spec, format);
+        struct KernAux_PrintfFmt_Spec spec = KernAux_PrintfFmt_Spec_create_out_new(format, &new_format);
 
         if (spec.set_width) {
             KernAux_PrintfFmt_Spec_set_width(&spec, 12);
@@ -75,6 +77,10 @@ void example_main()
         if (spec.set_precision) {
             KernAux_PrintfFmt_Spec_set_precision(&spec, 34);
         }
+
+        assert(spec.format_start == format);
+        assert(spec.format_limit == &format[6]);
+        assert(new_format == &format[6]);
 
         assert(
             spec.flags ==
@@ -88,5 +94,8 @@ void example_main()
         assert(spec.precision == 34);
         assert(spec.type == KERNAUX_PRINTF_FMT_TYPE_INT);
         assert(spec.base == 10);
+
+        assert(spec.set_width);
+        assert(spec.set_precision);
     }
 }
